force-app/main/default/objects/Contract/fields/Billable_Account__c.field-meta.xml
<CustomField>
    <fullName>Billable_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billable Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Billable Account</relationshipLabel>
    <relationshipName>Billable_Account</relationshipName>
    <type>Lookup</type>
</CustomField>