force-app/main/default/objects/Contract/fields/Billable_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Billable_Account_Id__c</fullName>
    <formula>Billable_Account__c</formula>
    <label>Billable Account Id</label>
    <type>Text</type>
</CustomField>