force-app/main/default/objects/Contract/fields/CalcEndDate__c.field-meta.xml
<CustomField>
    <fullName>CalcEndDate__c</fullName>
    <formula>StartDate -1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CalcEndDate</label>
    <type>Date</type>
</CustomField>