force-app/main/default/objects/Contract/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <label>Commission in %</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>