force-app/main/default/objects/Contract/fields/Commission_Type__c.field-meta.xml
<CustomField>
    <fullName>Commission_Type__c</fullName>
    <label>Commission Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>Per Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>