force-app/main/default/objects/Contract/fields/Do_not_auto_renew__c.field-meta.xml
<CustomField>
    <fullName>Do_not_auto_renew__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do not Auto-renew</label>
    <type>Checkbox</type>
</CustomField>