force-app/main/default/objects/Contract/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>this hold the end date because the other end date is not writable</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>