force-app/main/default/objects/Contract/fields/External_Sales_Agency__c.field-meta.xml
<CustomField>
    <fullName>External_Sales_Agency__c</fullName>
    <description>External Agency field for KR</description>
    <formula>TEXT(Id_Opportunity__r.External_Sales_Agency__c)</formula>
    <label>External Sales Agency</label>
    <type>Text</type>
</CustomField>