force-app/main/default/objects/Contract/fields/Id_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Id_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>this holds the id of the opportunity</description>
    <label>Id Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>