force-app/main/default/objects/Contract/fields/Id_Opportunity_Quote_Service_Item__c.field-meta.xml
<CustomField>
    <fullName>Id_Opportunity_Quote_Service_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Id Opportunity Quote Service Item</label>
    <referenceTo>Opportunity_Quote_Service_Item__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>