force-app/main/default/objects/Contract/fields/Incentives__c.field-meta.xml
<CustomField>
    <fullName>Incentives__c</fullName>
    <description>Field calculates the day between start and end date of the contract</description>
    <formula>End_Date__c -  StartDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incentives</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>