force-app/main/default/objects/Contract/fields/IsTiered__c.field-meta.xml
<CustomField>
    <fullName>IsTiered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsTiered</label>
    <type>Checkbox</type>
</CustomField>