force-app/main/default/objects/Contract/fields/Last_renewal_date__c.field-meta.xml
<CustomField>
    <fullName>Last_renewal_date__c</fullName>
    <label>Last renewal date</label>
    <type>Date</type>
</CustomField>