force-app/main/default/objects/Contract/fields/Migrated_By__c.field-meta.xml
<CustomField>
    <fullName>Migrated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Migrated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ComissionsMigratedBy</relationshipName>
    <type>Lookup</type>
</CustomField>