force-app/main/default/objects/Contract/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>this holds the name of the commission</description>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>