force-app/main/default/objects/Contract/fields/ON_LastModified__c.field-meta.xml
<CustomField>
    <fullName>ON_LastModified__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Helper Field: Indicates if the record was forgotten during the last upsert.</description>
    <inlineHelpText>Helper Field: Indicates if the record was forgotten during the last upsert.</inlineHelpText>
    <label>Last Modified</label>
    <type>DateTime</type>
</CustomField>