force-app/main/default/objects/Contract/fields/ON_LastUpsertError__c.field-meta.xml
<CustomField>
    <fullName>ON_LastUpsertError__c</fullName>
    <description>Errors during upsert. The field will be cleared on success.</description>
    <inlineHelpText>Errors during upsert. The field will be cleared on success.</inlineHelpText>
    <label>Connector: Last Upsert Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>