force-app/main/default/objects/Contract/fields/ON_Upsertable__c.field-meta.xml
<CustomField>
    <fullName>ON_Upsertable__c</fullName>
    <description>If checked, the Contract can be transferred by the JustOn Connector.</description>
    <formula>NOT(ISBLANK(AccountId)) 
&amp;&amp; 
OR(RecordType.DeveloperName = &quot;SE_Contract&quot;,RecordType.DeveloperName = &quot;FI_Contract&quot;) 
&amp;&amp; 
Account.ON_Upsertable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If checked, the Contract can be transferred by the JustOn Connector.</inlineHelpText>
    <label>Connector: Upsertable</label>
    <type>Checkbox</type>
</CustomField>