force-app/main/default/objects/Contract/fields/ON_UpsertableSE__c.field-meta.xml
<CustomField>
    <fullName>ON_UpsertableSE__c</fullName>
    <formula>NOT(ISBLANK(AccountId)) 
&amp;&amp; 
OR(RecordType.DeveloperName = &quot;SE_Contract&quot;,RecordType.DeveloperName = &quot;FI_Contract&quot;)
&amp;&amp;
Account.ON_UpsertableSE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Connector: Upsertable SE</label>
    <type>Checkbox</type>
</CustomField>