force-app/main/default/objects/Contract/fields/Opportunity_Level__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Level__c</fullName>
    <formula>TEXT(Id_Opportunity__r.Level__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Level</label>
    <type>Text</type>
</CustomField>