force-app/main/default/objects/Contract/fields/Physical_Copy__c.field-meta.xml
<CustomField>
    <fullName>Physical_Copy__c</fullName>
    <description>SP-1428</description>
    <label>Physical Copy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>