force-app/main/default/objects/Contract/fields/Recurring_Fee__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Fee__c</fullName>
    <label>Recurring Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>