force-app/main/default/objects/Contract/fields/Renewal_version__c.field-meta.xml
<CustomField>
    <fullName>Renewal_version__c</fullName>
    <label>Renewal version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>