force-app/main/default/objects/Contract/fields/Renewed_by__c.field-meta.xml
<CustomField>
    <fullName>Renewed_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewed by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>