force-app/main/default/objects/Contract/fields/RenVersion__c.field-meta.xml
<CustomField>
    <fullName>RenVersion__c</fullName>
    <formula>FLOOR((TODAY()-StartDate)/365)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RenVersion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>