force-app/main/default/objects/Contract/fields/RoganAddPriceListAPIError__c.field-meta.xml
<CustomField>
    <fullName>RoganAddPriceListAPIError__c</fullName>
    <label>RoganAddPriceListAPIError</label>
    <type>TextArea</type>
</CustomField>