force-app/main/default/objects/Contract/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <description>Service type of contract. Says whether a contract is a main service or an additional service (surcharge)</description>
    <label>Service Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>