force-app/main/default/objects/Contract/recordTypes/AT_Contract.recordType-meta.xml
<RecordType>
    <fullName>AT_Contract</fullName>
    <active>true</active>
    <label>AT Contract</label>
</RecordType>