force-app/main/default/objects/Contract/recordTypes/CD_Contract.recordType-meta.xml
<RecordType>
    <fullName>CD_Contract</fullName>
    <active>true</active>
    <description>Contract for Click Delivery</description>
    <label>CD Contract</label>
</RecordType>