force-app/main/default/objects/Contract/recordTypes/CZ_Contract.recordType-meta.xml
<RecordType>
    <fullName>CZ_Contract</fullName>
    <active>true</active>
    <label>CZ Contract</label>
</RecordType>