force-app/main/default/objects/Contract/recordTypes/DE_Contract.recordType-meta.xml
<RecordType>
    <fullName>DE_Contract</fullName>
    <active>true</active>
    <label>DE Contract</label>
</RecordType>