force-app/main/default/objects/Contract/recordTypes/DH_AU_Contract.recordType-meta.xml
<RecordType>
    <fullName>DH_AU_Contract</fullName>
    <active>true</active>
    <label>DH AU Contract</label>
</RecordType>