force-app/main/default/objects/Contract/recordTypes/FI_Contract.recordType-meta.xml
<RecordType>
    <fullName>FI_Contract</fullName>
    <active>true</active>
    <label>FI Contract</label>
</RecordType>