force-app/main/default/objects/Contract/recordTypes/FP_Contract.recordType-meta.xml
<RecordType>
    <fullName>FP_Contract</fullName>
    <active>true</active>
    <label>FP Contract</label>
</RecordType>