force-app/main/default/objects/Contract/recordTypes/HU_Contract.recordType-meta.xml
<RecordType>
    <fullName>HU_Contract</fullName>
    <active>true</active>
    <label>HU Contract</label>
</RecordType>