force-app/main/default/objects/Contract/recordTypes/PY_Contract.recordType-meta.xml
<RecordType>
    <fullName>PY_Contract</fullName>
    <active>true</active>
    <label>PY Contract</label>
</RecordType>