force-app/main/default/objects/Contract/recordTypes/SE_Contract.recordType-meta.xml
<RecordType>
    <fullName>SE_Contract</fullName>
    <active>true</active>
    <description>Sweden Contract</description>
    <label>SE Contract</label>
</RecordType>