force-app/main/default/objects/Contract/recordTypes/Talabat_Contract.recordType-meta.xml
<RecordType>
    <fullName>Talabat_Contract</fullName>
    <active>true</active>
    <label>Talabat Contract</label>
</RecordType>