force-app/main/default/objects/Contract/recordTypes/UK_Contract.recordType-meta.xml
<RecordType>
    <fullName>UK_Contract</fullName>
    <active>true</active>
    <label>UK Contract</label>
</RecordType>