force-app/main/default/objects/Contract/recordTypes/Yogiyo_Contract.recordType-meta.xml
<RecordType>
    <fullName>Yogiyo_Contract</fullName>
    <active>true</active>
    <label>Yogiyo Contract</label>
</RecordType>