force-app/main/default/objects/Contract/listViews/KR_Commissions_Contracts.listView-meta.xml
<ListView>
    <fullName>KR_Commissions_Contracts</fullName>
    <columns>Name__c</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>Recurring_Fee__c</columns>
    <columns>Service_Type__c</columns>
    <columns>Commission__c</columns>
    <columns>CONTRACT.STATUS_CODE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Name__c</field>
        <operation>startsWith</operation>
        <value>Yogiyo</value>
    </filters>
    <label>KR Commissions / Contracts</label>
    <language>en_US</language>
</ListView>