force-app/main/default/objects/Contract/listViews/PY_Commissions.listView-meta.xml
<ListView>
    <fullName>PY_Commissions</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contract.PY_Contract</value>
    </filters>
    <label>PY Commissions</label>
    <language>en_US</language>
    <sharedTo>
        <role>Global_Admin</role>
    </sharedTo>
</ListView>